--- a/compose-example/docker-compose.yml
+++ b/compose-example/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
 services:
   web:
     container_name: my_apollo_container
-    image: mitzerh/apollo
+    image: mitzerh/apollo-php
     restart: always
     volumes:
       - type: bind
